--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
       <div class="logo">RAPSARVIA</div>
       <section class="cont-enla">
         <ul>
+          <li class="menuHamLi">menu hamburuesa</li>
           <li><a href="#"> <span class="off">INICIO</span></a></li>
           <li><a href="novedades.html"> <span class="off">NOVEDADES</span></a></li>
           <li><a href="productos.html" class="productos"><span class="off"> PRODUCTOS</span></a></li>
-          <li class="off-1"><a href="accesorios.html"><span class="off-1">ACCESORIOS</span></a></li>
+          <li class="off-1"><a href="accesorios.html"><span class="off">ACCESORIOS</span></a></li>
           <li><a href=""><i class="fas fa-shopping-bag "></i></a></li>
           <li><svg class="lupa" width="25" height="21" viewBox="0 0 65 61" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -47,9 +48,9 @@
 
   </header>
   <section class="portada ">
-    <div>
-      <button class="bu-principal-1 ppt "><a href="#" class="bu-prin-1 linea">Ver novedades</a></button>
-    </div>
+
+    <button class="bu-principal-1 ppt "><a href="#" class="bu-prin-1 linea">Ver novedades</a></button>
+
     <article class="des-port">
       <h3 class="title-des">COLLECTION 4.0</h3>
       <p class="des-p">
