--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <title>pagina</title>
 </head>
 
-<body class="body__practica">
+<body class="body__practica" id="body__practicaID">
   <header>
 
     <section class="menu">
@@ -48,7 +48,6 @@
 
   </header>
   <section class="portada ">
-
     <button class="bu-principal-1 ppt "><a href="#" class="bu-prin-1 linea">Ver novedades</a></button>
 
     <article class="des-port">
@@ -58,41 +57,43 @@
     </article>
   </section>
   <section class="portada-2">
-    <div>
-      <button class="bu-principal "><a href="#" class="bu-prin linea">Ver novedades</a></button>
-    </div>
+
+    <button class="bu-principal "><a href="#" class="bu-prin linea">Ver novedades</a></button>
     <article class="des-port-2">
       <h3 class="title-des-2">COLLECTION 4.0</h3>
       <p class="des-p-2">
         La nouvelle collection Visionnaire est arrivée! Découvrez toutes les nouveautés.</p>
     </article>
   </section>
+
   <section class="contain_title_ofert">
     <h2 class="title-ofertas">ofertas</h2>
   </section>
-  <section class="cont-publicidad-1">
 
-    <div class="bu-publicidad">
-      <a href="#" class="bu-publi">ver</a>
-    </div>
+  <div class="containPrincipal" id="containPrincipalID">
+    <section class="cont-publicidad-1 span_publi">
+      <div class="bu-publicidad">
+        <a href="#" class="bu-publi">ver</a>
+      </div>
+    </section>
+    <section class="cont-publicidad-2  span_publi">
+      <div class="bu-publicidad">
+        <a href="accesorios.html" class="bu-publi">ver</a>
+      </div>
+    </section>
+    <section class="cont-publicidad-3  span_publi">
+      <div class="bu-publicidad">
+        <a href="accesorios.html" class="bu-publi">ver</a>
+      </div>
+    </section>
+    <section class="cont-publicidad-4 span_publi">
+      <div class="bu-publicidad">
+        <a href="accesorios.html" class="bu-publi">ver</a>
+      </div>
 
-  </section>
-  <section class="cont-publicidad-2">
-    <div class="bu-publicidad">
-      <a href="accesorios.html" class="bu-publi">ver</a>
-    </div>
+    </section>
 
-  </section>
-  <section class="cont-publicidad-3">
-    <div class="bu-publicidad">
-      <a href="accesorios.html" class="bu-publi">ver</a>
-    </div>
-  </section>
-  <section class="cont-publicidad-4">
-    <div class="bu-publicidad">
-      <a href="accesorios.html" class="bu-publi">ver</a>
-    </div>
-  </section>
+  </div>
   <section class="secciones">
     <article class="img-secciones">
       <img class="img-sec" src="./imagenes-proyecto/4sectionfot1.jpeg" alt="">
@@ -157,7 +158,7 @@
     </div>
 
   </footer>
-
+  <script src="./index.js" type="module"></script>
 </body>
 
 </html>
