--- a/index.html
+++ b/index.html
@@ -129,10 +129,8 @@
     <div class="conteiner-redes">
       <a class="redes"><i class="fab fa-facebook-square red"></i></a>
       <a class="redes"><i class="fab fa-instagram red"></i></a>
-    </div>>
+    </div>
     <div class="container-list">
-
-
       <ul class="lista-footer">
         <li class="elem-list"><a href=""><i class="fab fa-whatsapp"></i> 5491134522737</a></li>
         <li class="elem-list"><a href=""><i class="fas fa-phone-alt"></i> +54 9 11 696998723</li></a>
@@ -153,7 +151,7 @@
     <div class="url-pag">
       <h4><a class="url-hijo link-hij" target="_blank"
           href="https://www.facebook.com/emanuelhugo.ifran">https://www.facebook.com/emanuelhugo.ifran </a></h4>
-      <h4 class="url-hijo  ">Defensa de las y los consumidores. Para reclamos ingrese<a class="url-hijo" href="#">
+      <h4 class="url-hijo_2 ">Defensa de las y los consumidores. Para reclamos ingrese<a class="url-hijo" href="#">
           aquí</a></h4>
     </div>
 
