--- a/muestra_producto.html
+++ b/muestra_producto.html
@@ -34,8 +34,8 @@
       <div class="logo">RAPSARVIA</div>
       <section class="cont-enla">
         <ul>
-          <li><a href="#"> <span class="off">INICIO</span></a></li>
-          <li><a href="#"> <span class="off">NOVEDADES</span></a></li>
+          <li><a href="index.html"> <span class="off">INICIO</span></a></li>
+          <li><a href="novedades.html"> <span class="off">NOVEDADES</span></a></li>
           <li><a href="productos.html" class="productos"><span class="off"> PRODUCTOS</span></a></li>
           <li class="off-1"><a href="accesorios.html"><span class="off-1">ACCESORIOS</span></a></li>
           <li><a href=""><i class="fas fa-shopping-bag "></i></a></li>
