--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
@@ -24,12 +25,31 @@
 
 <body class="body__practica" id="body__practicaID">
   <header>
+    <div class="menuHamCon">
+      <div class="logo"> RAPSARVIA</div>
 
+      <button class="panel_btn hamburger hamburger--slider" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+      <aside class="panel_hambur">
+        <ul class="ul_hambur">
+          <a href="#">section</a>
+          <a href="#">section2</a>
+          <a href="#">section2</a>
+          <a href="#">section2</a>
+          <a href="#">section2</a>
+        </ul>
+
+      </aside>
+      <button><i class="fas fa-shopping-bag "></i></button>
+    </div>
     <section class="menu">
-      <div class="logo">RAPSARVIA</div>
+      <div class="logo "><span class="off">RAPSARVIA</span></div>
+
       <section class="cont-enla">
         <ul>
-          <li class="menuHamLi">menu hamburuesa</li>
           <li><a href="#"> <span class="off">INICIO</span></a></li>
           <li><a href="novedades.html"> <span class="off">NOVEDADES</span></a></li>
           <li><a href="productos.html" class="productos"><span class="off"> PRODUCTOS</span></a></li>
@@ -44,8 +64,6 @@
         </ul>
       </section>
     </section>
-
-
   </header>
   <section class="portada ">
     <button class="bu-principal-1 ppt "><a href="#" class="bu-prin-1 linea">Ver novedades</a></button>
