--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,18 +50,20 @@
         <div class="opciones_de_productos  " id="opciones_en_js">
           <div class="container_opciones_menu">
             <h3 class="title_menu_opciones-1"> Categorias</h3>
-            <ul class="categorias_opciones">
-              <li class="list_opciones"><a href="#" class="list_opciones-1">conjuntos</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Pantalones</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Pollera</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Vestidos</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Remeras</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Zapatos</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Pollera</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Vestidos</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Remeras</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones-1">Zapatos</a> </li>
-            </ul>
+            <aside>
+              <ul class="categorias_opciones">
+                <li class="list_opciones"><a href="#" class="list_opciones-1">conjuntos</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Pantalones</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Pollera</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Vestidos</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Remeras</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Zapatos</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Pollera</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Vestidos</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Remeras</a> </li>
+                <li class="list_opciones"><a href="#" class="list_opciones-1">Zapatos</a> </li>
+              </ul>
+            </aside>
             <ul class="color_opciones">
               <h3 class="title_menu_opciones"> Colores</h3>
               <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
@@ -299,7 +302,7 @@
     <div class="conteiner-redes">
       <a class="redes"><i class="fab fa-facebook-square red"></i></a>
       <a class="redes"><i class="fab fa-instagram red"></i></a>
-    </div>>
+    </div>
     <div class="container-list">
 
 
