--- a/productos.html
+++ b/productos.html
@@ -48,82 +48,14 @@
       </button>
       <div class="menu_opciones">
         <div class="opciones_de_productos  " id="opciones_en_js">
-          <div class="container_opciones_menu">
-            <h3 class="title_menu_opciones-1"> Categorias</h3>
-            <aside>
-              <ul class="categorias_opciones">
-                <li class="list_opciones"><a href="#" class="list_opciones-1">conjuntos</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Pantalones</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Pollera</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Vestidos</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Remeras</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Zapatos</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Pollera</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Vestidos</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Remeras</a> </li>
-                <li class="list_opciones"><a href="#" class="list_opciones-1">Zapatos</a> </li>
-              </ul>
-            </aside>
-            <ul class="color_opciones">
-              <h3 class="title_menu_opciones"> Colores</h3>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-            </ul>
-            <ul class="color_opciones-1">
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">colores</a>
-                <div class="cuadrados_colores"></div>
-              </li>
-            </ul>
-            <ul class="talle_opciones">
-              <h3 class="title_menu_opciones"> Talle</h3>
-              <li class="list_opciones"><a href="#" class="list_opciones">36</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">38</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">40</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">42</a> </li>
-
-              <li class="list_opciones"><a href="#" class="list_opciones">L</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">M</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">S</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">UNICO</a> </li>
-              <li class="list_opciones"><a href="#" class="list_opciones">XL</a> </li>
-            </ul>
-
-
-          </div>
         </div>
-      </div>
   </section>
 
 
   <section class="img__product">
-
     <section class="container-product">
-
       <div class="foto_product" id="foto_productID">
         <a href="./muestra_producto.html">
-
           <img class="foto-galeria-1 a_fotogalery" src="./imagenes-proyecto/4seccion-2.jpg" alt=""></a>
         <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
             al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
@@ -271,7 +203,7 @@
           <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_34.jpg" alt=""></a>
         <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
             al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria-">
+        <div class="info-galeria">
           <h3 class="title_galeria"> JEAN PATCHES</h3>
           <h4 class="precio_original" id="title_galeriaID">$6,900.00</h4>
           <del class="precio_rebaja">$4,500.00</del>
@@ -332,18 +264,12 @@
 
   </footer>
   <div class="seccionCar" id="seccionCarID">
-    <div class="contaner_con_modal"><button class="button_cerrar_modal" id="button_cerrar_modalID">X</button>
-      <div class="containe_carrito_modal" id="containeModalID">
-        <table class="table_carr_modal">
-          <thead class="thead_carr_modal">
-            <tr>
-              <th>Imagen</th>
-              <th>Producto</th>
 
-              <th>Precio</th>
-              <th>Cantidad</th>
-            </tr>
-          </thead>
+    <div class="contaner_con_modal">
+
+      <div class="containe_carrito_modal" id="containeModalID">
+        <h3 class="title_modal_carr">Carrito</h3>
+        <table class="table_carr_modal">
           <tbody class="Tbody" id="TbodyID">
           </tbody>
         </table>
@@ -355,7 +281,7 @@
           <div class="ConButtonComprar">
             <button class="ButtonComCarr" id="ButtonComCarrID" value="">COMPRAR</button>
           </div>
-        </div>
+        </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir comprando</button>
       </div>
     </div>
   </div>
