--- a/accesorios.html
+++ b/accesorios.html
@@ -65,181 +65,8 @@
     </div>
   </section>
   <section class="img__product">
-    <section class="container-product">
-      <div class="foto_product" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagenes-proyecto/4seccion-2.jpg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> CAMIZA GINZA</h3>
-          <h4 class="precio_original" id="title_galeriaID">$4,850.00</h4>
-          <del class="precio_rebaja">$4,000</del>
-          <div class="off_porciento">
-            <p>-30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria11.jpg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> BUZO DESTINI</h3>
-          <h4 class="precio_original" id="title_galeriaID">$3,900.00</h4>
-          <del class="precio_rebaja">$5,070.00</del>
-          <div class="off_porciento">
-            <p>-30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria20.jpg" alt=""></a>
-        <div class="carrto__comprar " id="carrto__comprarID"><button class="buttom__galery"
-            id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria">FALDA GREEK </h3>
-          <h4 class="precio_original" id="title_galeriaID">$3,200.00</h4>
-          <del class="precio_rebaja">$3,100.00</del>
-          <div class="off_porciento">
-            <p>- 50%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery " src="./imagen-productos/galeria_25.png" alt=""></a>
-        <div class="carrto__comprar " id="carrto__comprarID"><button class="buttom__galery"
-            id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> FALDA TEJIDA</h3>
-          <h4 class="precio_original" id="title_galeriaID">$2,450.00</h4>
-          <del class="precio_rebaja">$408,33</del>
-          <div class="off_porciento">
-            <p>- 30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagenes-muestra/muestra_26_1.jpeg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> FALDA MIDI SATIN</h3>
-          <h4 class="precio_original" id="title_galeriaID">$3,940.00</h4>
-          <del class="precio_rebaja">$5.200</del>
-          <div class="off_porciento">
-            <p>-30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product  a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_29.jpeg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> CHALECO SUMMER</h3>
-          <h4 class="precio_original" id="title_galeriaID">$14,500.00</h4>
-          <del class="precio_rebaja">$1,570.00</del>
-          <div class="off_porciento">
-            <p>-50%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_30.jpeg" alt="">
-          <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery"
-              id="buttom__galeryID">agregar
-              al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-          <div class="info-galeria">
-            <h3 class="title_galeria"> CAMISA MYKONOS MOSTAZA</h3>
-            <h4 class="precio_original" id="title_galeriaID">$3,100.00</h4>
-            <del class="precio_rebaja">$1,450.00</del>
-            <div class="off_porciento">
-              <p>-30%</p>
-            </div>
-          </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_31.jpeg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> CAMISA VESTIDO TROPICAL
-          </h3>
-          <h4 class="precio_original" id="title_galeriaID">$6,000.00</h4>
-          <del class="precio_rebaja">$2,390.00</del>
-          <div class="off_porciento">
-            <p>-30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_32.jpg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> VESTIDO ATICO ZEBRA</h3>
-          <h4 class="precio_original" id="title_galeriaID">$6,800.00</h4>
-          <del class="precio_rebaja">$940.00</del>
-          <div class="off_porciento">
-            <p>-30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product a_fotogalery" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_33.jpg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> VESTIDO ATICO</h3>
-          <h4 class="precio_original" id="title_galeriaID">$9,500.00</h4>
-          <del class="precio_rebaja">$15,000.00</del>
-          <div class="off_porciento">
-            <p>-30%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_34.jpg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria"> JEAN PATCHES</h3>
-          <h4 class="precio_original" id="title_galeriaID">$6,900.00</h4>
-          <del class="precio_rebaja">$4,500.00</del>
-          <div class="off_porciento">
-            <p>-50%</p>
-          </div>
-        </div>
-      </div>
-      <div class="foto_product" id="foto_productID">
-        <a href="./muestra_producto.html">
-          <img class="foto-galeria-1 a_fotogalery" src="./imagen-productos/galeria_35.jpg" alt=""></a>
-        <div class="carrto__comprar" id="carrto__comprarID"><button class="buttom__galery" id="buttom__galeryID">agregar
-            al carrtito<i class="fas fa-shopping-cart carrLog" _mstvisible="2"></i></button></div>
-        <div class="info-galeria">
-          <h3 class="title_galeria">JOGGIN LOVE BLANCO</h3>
-          <h4 class="precio_original" id="title_galeriaID">$3,375.00</h4>
-          <del class="precio_rebaja">$4.500</del>
-          <div class="off_porciento">
-            <p>-50%</p>
-          </div>
-        </div>
-      </div>
-
-
+    <section class="container-product  insertProduct">
+      <img src="./" alt="">
     </section>
   </section>
   <footer class=" footer">
