--- a/accesorios.html
+++ b/accesorios.html
@@ -17,7 +17,7 @@
   <title>Document</title>
 </head>
 
-<body class="body_product" id="body_productID">
+<body class="body_product body_productAcce" id="body_productID">
   <header id="header">
     <button id="efecto_buttom" href="" class="button_opciones">FILTROS
       <i class="fas fa-filter"></i>
@@ -65,7 +65,7 @@
     </div>
   </section>
   <section class="img__product">
-    <section class="container-product  insertProduct">
+    <section class="container-product insertProduct">
     </section>
   </section>
   <footer class=" footer">
