--- a/accesorios.html
+++ b/accesorios.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -72,7 +73,7 @@
     <div class="conteiner-redes">
       <a class="redes"><i class="fab fa-facebook-square red"></i></a>
       <a class="redes"><i class="fab fa-instagram red"></i></a>
-    </div>>
+    </div>
     <div class="container-list">
 
 
