--- a/muestra_producto.html
+++ b/muestra_producto.html
@@ -28,29 +28,7 @@
 </head>
 
 <body class="_body_muestra">
-  <header>
-    <section class="menu">
-      <div class="logo">RAPSARVIA</div>
-      <section class="cont-enla">
-        <ul>
-          <li><a href="./index.html"> <span class="off">INICIO</span></a></li>
-          <li><a href="./novedades.html"> <span class="off">NOVEDADES</span></a></li>
-          <li><a href="index.html"> <span class="off">INICIO</span></a></li>
-          <li><a href="novedades.html"> <span class="off">NOVEDADES</span></a></li>
-          <li><a href="productos.html" class="productos"><span class="off"> PRODUCTOS</span></a></li>
-          <li class="off-1"><a href="accesorios.html"><span class="off-1">ACCESORIOS</span></a></li>
-          <li><a href=""><i class="fas fa-shopping-bag "></i></a></li>
-          <li><svg class="lupa" width="25" height="21" viewBox="0 0 65 61" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M25.4061 0.5C11.7233 0.5 0.628906 10.9418 0.628906 23.8198C0.628906 36.6978 11.7233 47.1395 25.4062 47.1395C30.6678 47.1395 35.5474 45.5949 39.5584 42.9639L39.5613 42.9611L57.9372 60.2562C58.2782 60.5771 58.8205 60.5854 59.1703 60.2562L64.1229 55.595C64.4639 55.274 64.4464 54.7418 64.12 54.4345L45.7467 37.1422C48.5422 33.3644 50.1834 28.7717 50.1834 23.8198C50.1834 10.9418 39.089 0.5 25.4061 0.5ZM25.4061 41.6525C14.9413 41.6525 6.45877 33.6689 6.45877 23.8198C6.45877 13.9706 14.9414 5.98702 25.4061 5.98702C35.8708 5.98702 44.3534 13.9706 44.3534 23.8198C44.3534 33.6689 35.8709 41.6525 25.4061 41.6525Z"
-                fill="black" />
-            </svg></li>
-        </ul>
-      </section>
-    </section>
-
-
+  <header id="header">
   </header>
   <section class="espacio_blanco"></section>
   <section class="muestra_producto_fot1">
@@ -60,11 +38,6 @@
   </section>
   <section class="muestra_producto_fot2">
     <div class="container_product_formu" id="formu_infoID">
-
-
-
-
-
     </div>
     <div class="envios_envios_formu">
       <div class="envios_formu_container">
@@ -168,8 +141,30 @@
     </div>
 
   </footer>
+  <div class="seccionCar" id="seccionCarID">
 
-  <script src="./muestra-Producto.js"></script>
+    <div class="contaner_con_modal">
+
+      <div class="containe_carrito_modal" id="containeModalID">
+        <h3 class="title_modal_carr">Carrito</h3>
+        <table class="table_carr_modal">
+          <tbody class="Tbody" id="TbodyID">
+          </tbody>
+        </table>
+        <br></br>
+        <div class="TotalCarrito">
+          <div class="col">
+            <h3 class="h3Total" id="h3TotalID">Total : 0</h3>
+          </div>
+          <div class="ConButtonComprar">
+            <button class="ButtonComCarr" id="ButtonComCarrID" value="">COMPRAR</button>
+          </div>
+        </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir comprando</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="./muestra-Producto.js" type="module"></script>
 </body>
 
 </html>
