--- a/accesorios.html
+++ b/accesorios.html
@@ -124,7 +124,7 @@
       </div>
     </div>
   </div>
-  <script src="_accesorios.js" type="module"></script>
+  <script src="accesorios.js" type="module"></script>
 </body>
 
 </html>
