seguir con carrito

--- a/carrito.html
+++ b/carrito.html
@@ -16,7 +16,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="../proyectoecomers/Sass_pro/scss/practica.css">
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
@@ -50,51 +50,24 @@
   <div class="tablaCarrito">
     <h3 class="titleCarrito">Carrito de compras</h3>
     <div class="container_carrito">
-      <table class="table_carr">
-        <tr>
-          <th>Producto</th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th>envio</th>
-          <th>Precio</th>
-          <th>Cantidad</th>
-          <th>Total</th>
-          <th></th>
-        </tr>
-        <tr>
-          <td colspan="6">info del carrito</td>
-          <td>envioo</td>
-          <td>Preciooo</td>
-          <td>cantidooo</td>
-          <td>totellla</td>
-          <td class="td_buttom"><button class="button_eliminar" value="">X</button></td>
-        </tr>
+      <div class="contain_img_esp">
+        <img class="imagenPagCarr" src="#" alt="">
+        <div class="especificaciones">
+          <h3 class="nombre_esp">nombre prducto</h3>
+          <h4 class="esp_esp">especificaciones</h4>
+          <p class="precio_esp">precio</p>
+        </div>
+      </div>
+      <div class="contain_deleteCarr">
+        <button class="deleteCarr">X</button>
+      </div>
 
-      </table>
 
     </div>
 
   </div>
   <div class="suma_de_precios">
     <div class="containe_carrito_modal" id="containeModalID">
-      <table class="table_carr_modal">
-        <tr>
-          <th>Imagen</th>
-          <th>Producto</th>
-          <th>Precio</th>
-          <th></th>
-        </tr>
-        <tr>
-          <td>envioo</td>
-          <td>Preciooo</td>
-          <td>carrito</td>
-          <td><button class="button_eliminar_modal" value="">X</button></td>
-        </tr>
-
-      </table>
     </div>
   </div>
   <footer class=" footer">
