--- a/productos.html
+++ b/productos.html
@@ -28,6 +28,7 @@
 <body class="body_product body_productProduct" id="body_productID">
   <header id="header">
 
+
   </header>
 
   <section class="presentacion_productos">
@@ -107,7 +108,7 @@
             <h3 class="h3Total" id="h3TotalID">Total : 0</h3>
           </div>
           <div class="ConButtonComprar">
-            <button class="ButtonComCarr" id="ButtonComCarrID" value="">COMPRAR</button>
+            <button class="ButtonComCarr" id="ButtonComCarrID" value=""><a href="./carrito.html"> COMPRAR</a></button>
           </div>
         </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir comprando</button>
       </div>
