--- a/carrito.html
+++ b/carrito.html
@@ -36,10 +36,41 @@
   </div>
   <div class="tablaCarrito">
 
-    <h3 class="titleCarrito">Carrito de compras</h3>
 
-  </div>
-  <div class="TotalCompra"></div>
+    <h3 class="titleCarrito">Carrito de compras</h3>
+    <div class="contain_principal">
+      <div class="sumatoriaCarr">
+        <ul>
+          <li><span>
+              4 productos
+            </span><span>
+              $ 49.000,00
+            </span></li>
+          <li><span>
+              envio
+            </span><span>
+              $ 200,00
+            </span></li>
+          <li><span>
+              envio
+            </span><span>
+              $ 200,00
+            </span></li>
+          <li><span>
+              Total
+            </span><span>
+              $ 49.000,00
+            </span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="noCarr">
+      <div class="containNoCarr">
+        <h3>No a agregado productos al carrito</h3>
+        <p>Echa un vistazo a nuestra nueva colección, seguro que encuentras lo que necesitas.</p>
+      </div>
+    </div>
+
   </div>
   <div class="suma_de_precios">
     <div class="containe_carrito_modal" id="containeModalID">
