--- a/productos.html
+++ b/productos.html
@@ -26,6 +26,9 @@
 </head>
 
 <body class="body_product body_productProduct" id="body_productID">
+  <div id="containerCarga">
+    <div id="cargaPagina"></div>
+  </div>
   <header id="header">
 
 
