--- a/accesorios.html
+++ b/accesorios.html
@@ -21,6 +21,9 @@
 </head>
 
 <body class="body_product body_productAcce" id="body_productID">
+  <div id="containerCarga">
+    <div id="cargaPagina"></div>
+  </div>
   <header id="header">
     <button id="efecto_buttom" href="" class="button_opciones">FILTROS
       <i class="fas fa-filter"></i>
@@ -127,6 +130,12 @@
     </div>
   </div>
   <script src="./accesorios.js" type="module"></script>
+  <script>
+    window.onload = function () {
+      let contenedor = document.getElementById("containerCarga")
+      contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
+    }
+  </script>
 
 </body>
 
