--- a/carrito.html
+++ b/carrito.html
@@ -29,6 +29,9 @@
 
 
 <body class="body_carr" id="body_carrID">
+  <div id="containerCarga">
+    <div id="cargaPagina"></div>
+  </div>
   <header id="header">
   </header>
   <div class="separador">
@@ -82,6 +85,12 @@
 
   </footer>
   <script src="./carrito.js" type="module"></script>
+  <script>
+    window.onload = function () {
+      let contenedor = document.getElementById("containerCarga")
+      contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
+    }
+  </script>
 </body>
 
 </html>
