--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 </head>
 
 <body class="body__practica" id="body__practicaID">
+  <div id="containerCarga">
+    <div id="cargaPagina"></div>
+  </div>
   <header id="header">
   </header>
   <section class="portada ">
@@ -136,6 +139,12 @@
 
   </footer>
   <script src="./index.js" type="module"></script>
+  <script>
+    window.onload = function () {
+      let contenedor = document.getElementById("containerCarga")
+      contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
+    }
+  </script>
 </body>
 
 </html>
