--- a/muestra_producto.html
+++ b/muestra_producto.html
@@ -28,6 +28,9 @@
 </head>
 
 <body class="_body_muestra">
+  <div id="containerCarga">
+    <div id="cargaPagina"></div>
+  </div>
   <header id="header">
   </header>
   <section class="espacio_blanco"></section>
@@ -165,6 +168,12 @@
   </div>
 
   <script src="./muestra-Producto.js" type="module"></script>
+  <script>
+    window.onload = function () {
+      let contenedor = document.getElementById("containerCarga")
+      contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
+    }
+  </script>
 </body>
 
 </html>
