--- a/novedades.html
+++ b/novedades.html
@@ -22,6 +22,9 @@
 
 
 <body class="body_novedad">
+  <div id="containerCarga">
+    <div id="cargaPagina"></div>
+  </div>
   <header>
     <section class="menu">
       <div class="logo">RAPSARVIA</div>
@@ -145,7 +148,12 @@
 
   </footer>
   <script src="index.js"></script>
-
+  <script>
+    window.onload = function () {
+      let contenedor = document.getElementById("containerCarga")
+      contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
+    }
+  </script>
 </body>
 
 </html>
