--- a/carrito.html
+++ b/carrito.html
@@ -42,6 +42,32 @@
 
     <h3 class="titleCarrito">Carrito de compras</h3>
     <div class="contain_principal">
+
+      <div class="sumatoriaCarr">
+        <ul>
+          <li><span>
+              4 productos
+            </span><span>
+              $ 49.000,00
+            </span></li>
+          <li><span>
+              envio
+            </span><span>
+              $ 200,00
+            </span></li>
+          <li><span>
+              envio
+            </span><span>
+              $ 200,00
+            </span></li>
+          <li><span>
+              Total
+            </span><span>
+              $ 49.000,00
+            </span></li>
+        </ul>
+
+      </div>
     </div>
     <div class="noCarr">
       <div class="containNoCarr">
