--- a/productos.html
+++ b/productos.html
@@ -20,6 +20,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
+  <link rel="icon" href="./Diseñologo.png">
 
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
   <title>Document</title>
