--- a/muestra_producto.html
+++ b/muestra_producto.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+  <link rel="icon" href="./Diseñologo.png">
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Noto+Serif+Display:ital,wght@1,200&display=swap"
     rel="stylesheet">
