--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
 
@@ -77,7 +78,7 @@
     </section>
 
   </div>
-  <section class="secciones">
+  <div class="secciones" data-aos="zoom-in">
     <article class="img-secciones">
       <img class="img-sec" src="./imagenes-proyecto/4sectionfot1.jpeg" alt="">
       <h3 class="h3   "><a href="#" class="sec-h3">SWEATERS</a> </h3>
@@ -91,8 +92,8 @@
       <h3 class="h3   "><a href="#" class="sec-h3">REMERAS </a> </h3>
     </article>
 
-  </section>
-  <article class="ant-foot">
+  </div>
+  <article class="ant-foot" data-aos="zoom-in">
     <div class="container-foot">
       <h2 class="title-ant">SUMATE AL #RAPSARVIAteam
       </h2>
@@ -138,13 +139,21 @@
     </div>
 
   </footer>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+
+  </script>
   <script src="./index.js" type="module"></script>
   <script>
     window.onload = function () {
       let contenedor = document.getElementById("containerCarga")
       contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
     }
+
   </script>
+
 </body>
+
 
 </html>
