--- a/accesorios.html
+++ b/accesorios.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
   <link rel="icon" href="./Diseñologo.png">
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
   <title>Document</title>
 </head>
@@ -126,10 +128,14 @@
           <div class="ConButtonComprar">
             <button class="ButtonComCarr" id="ButtonComCarrID" value=""><a href="carrito.html">COMPRAR</a> </button>
           </div>
-        </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir comprando</button>
+        </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir viendo</button>
       </div>
     </div>
   </div>
+  <script>
+    AOS.init();
+
+  </script>
   <script src="./accesorios.js" type="module"></script>
   <script>
     window.onload = function () {
