--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
     rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
-
-
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <title>pagina</title>
 </head>
 
@@ -50,11 +52,10 @@
     </article>
   </section>
 
-  <section class="contain_title_ofert">
-
+  <section class="contain_title_ofert" data-aos="fade-up">
     <h2 class="title-ofertas">ofertas</h2>
   </section>
-  <div class="containPrincipal" id="containPrincipalID">
+  <div class="containPrincipal" id="containPrincipalID" data-aos="fade-up">
     <section class="cont-publicidad-1 span_publi">
       <div class="bu-publicidad">
         <a href="#" class="bu-publi">ver</a>
@@ -140,6 +141,7 @@
 
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <script>
     AOS.init();
 
