--- a/carrito.html
+++ b/carrito.html
@@ -24,6 +24,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <title>Document</title>
 </head>
@@ -38,7 +40,7 @@
   <div class="separador">
 
   </div>
-  <div class="tablaCarrito">
+  <div class="tablaCarrito" data-aos="fade-up">
 
 
     <h3 class="titleCarrito">Carrito de compras</h3>
@@ -88,6 +90,10 @@
 
   </footer>
   <script src="./carrito.js" type="module"></script>
+  <script>
+    AOS.init();
+
+  </script>
   <script>
     window.onload = function () {
       let contenedor = document.getElementById("containerCarga")
