--- a/productos.html
+++ b/productos.html
@@ -22,6 +22,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
   <link rel="icon" href="./Diseñologo.png">
   <script src="https://kit.fontawesome.com/67b1745821.js" crossorigin="anonymous"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <title>Document</title>
 </head>
 
@@ -113,12 +115,16 @@
           <div class="ConButtonComprar">
             <button class="ButtonComCarr" id="ButtonComCarrID" value=""><a href="./carrito.html"> COMPRAR</a></button>
           </div>
-        </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir comprando</button>
+        </div><button class="button_cerrar_modal" id="button_cerrar_modalID">seguir viendo</button>
       </div>
     </div>
   </div>
 
   <script src="producto.js" type="module"></script>
+  <script>
+    AOS.init();
+
+  </script>
   <script>
     window.onload = function () {
       let contenedor = document.getElementById("containerCarga")
