--- a/accesorios.html
+++ b/accesorios.html
@@ -24,9 +24,9 @@
 </head>
 
 <body class="body_product body_productAcce" id="body_productID">
-  <div id="containerCarga">
+  <!--   <div id="containerCarga">
     <div id="cargaPagina"></div>
-  </div>
+  </div> -->
   <header id="header">
     <button id="efecto_buttom" href="" class="button_opciones">FILTROS
       <i class="fas fa-filter"></i>
@@ -136,14 +136,15 @@
     AOS.init();
 
   </script>
+
   <script src="./accesorios.js" type="module"></script>
-  <script>
+  <!--   <script>
     window.onload = function () {
       let contenedor = document.getElementById("containerCarga")
       contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
     }
-  </script>
 
+  </script> -->
 </body>
 
 </html>
