--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
     rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="./Sass_pro/scss/practica.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <title>pagina</title>
+  <title>Rapsarvia</title>
 </head>
 
 <body class="body__practica" id="body__practicaID">
@@ -141,7 +141,6 @@
 
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
   <script>
     AOS.init();
 
@@ -152,7 +151,6 @@
       let contenedor = document.getElementById("containerCarga")
       contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
     }
-
   </script>
 
 </body>
