--- a/productos.html
+++ b/productos.html
@@ -28,9 +28,9 @@
 </head>
 
 <body class="body_product body_productProduct" id="body_productID">
-  <div id="containerCarga">
+  <!--   <div id="containerCarga">
     <div id="cargaPagina"></div>
-  </div>
+  </div> -->
   <header id="header">
 
 
@@ -125,12 +125,7 @@
     AOS.init();
 
   </script>
-  <script>
-    window.onload = function () {
-      let contenedor = document.getElementById("containerCarga")
-      contenedor.style.visibility = "hidden"; contenedor.style.opacity = "0";
-    }
-  </script>
+
 </body>
 
 </html>
